[package]
name = "bamnado"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
bigtools = "0.4.3"
bio = "2.0.0"
bio-types = "1.0.1"
clap = {version = "4.5.8", features = ["derive"]}
colog = "1.3.0"
indicatif = {version = "*", features = ["rayon"]}
itertools = "*"
log = "0.4.22"
noodles = {version = '0.77.0', features = ['bam', 'bgzf', 'cram', 'sam', 'bed', 'core', 'csi']}
polars = "*"
rayon = "1.10.0"
rust-lapper = "1.1.0"
tempfile = "3.10.1"
serde ={ version = "*", features = ["derive"]}
crossbeam = "*"
serde_json = "*"
sprs = "0.11.1"
ndarray = "0.15.0"
pyo3 = { version = "*", features = ["extension-module"] }
anstyle = "1.0.8"