[package]
name = "bamnado"
version = "0.2.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
bigtools = "0.5.6"
bio = "2.3.0"
bio-types = "1.0.1"
clap = {version = "4.5.40", features = ["derive"]}
colog = "1.3.0"
indicatif = {version = "*", features = ["rayon"]}
itertools = "*"
log = "0.4.27"
noodles = {version = '0.99.0', features = ['bgzf', 'cram','bed', 'core', 'csi', 'async', 'sam', 'bam']}
polars = {version = "0.48.1", features = ['lazy', "polars-ops", "cum_agg"]}
rayon = "1.10.0"
rust-lapper = "1.1.0"
tempfile = "3.20.0"
serde ={ version = "1.0.219", features = ["derive"]}
crossbeam = "*"
serde_json = "1.0.140"
sprs = "0.11.1"
ndarray = "0.16.1"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
anstyle = "1.0.11"
futures = "*"
tokio = { version = "1.45.1"}
# granges = "0.2.2"