[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[project]
name = "bamnado"
version = "0.3.0"
description = 'Python bindings for BamNado'
authors = [{name = 'asmith', email = 'alastair.smith@ndcls.ox.ac.uk'}]


