[package]
name = "bamnado-python"
version = "0.3.2"
edition = "2024"
description = "Python extension wrapper for bamnado"
license = "MIT OR Apache-2.0"

[lib]
name = "_bamnado"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "auto-initialize", "abi3-py310"] }
numpy = "0.27.1"
bamnado = { path = "../bamnado" }
anyhow = "1.0.98"
ndarray = "0.17.1"
